<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/holo_red_light">

    <Button
        android:id="@+id/maheshwariBtnPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/permission" />

    <ImageView
        android:id="@+id/maheshwariAnimImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/animImageHeight"
        android:layout_margin="12dp"
        android:contentDescription="@string/anim" />

    <Button
        android:id="@+id/maheshwariStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/start" />

    <Button
        android:id="@+id/maheshwariStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop" />

</LinearLayout>