<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/maheshwariFirstName"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/tweenText"
            android:layout_margin="12dp"
            android:text="@string/first_name"
            android:gravity="start"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"/>

        <TextView
            android:id="@+id/maheshwariLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/last_name"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"/>


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="60dp"
        android:text="@string/orbit"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:textColor="@android:color/white"
        android:textAppearance="@android:style/TextAppearance.Medium"/>

    <ImageView
        android:layout_marginTop="8dp"
        android:id="@+id/maheshwariAnimMoon"
        android:layout_width="@dimen/tweenMoon"
        android:layout_height="@dimen/tweenMoon"
        android:src="@drawable/moon_img"
        android:scaleType="centerCrop"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/moon"
        android:layout_marginLeft="32dp" />

    <ImageView
        android:id="@+id/maheshwariAnimEarth"
        android:layout_width="@dimen/tweenEarth"
        android:layout_height="@dimen/tweenEarth"
        android:src="@drawable/earth_img"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:contentDescription="@string/earth" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp">

        <Button
            android:id="@+id/maheshwariBtnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/start"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/maheshwariBtnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/stop"
            android:layout_alignParentRight="true" />

    </RelativeLayout>




</LinearLayout>