<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:text="@string/tab1_title"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="@dimen/imageDimen"
            android:layout_height="@dimen/imageDimen"
            android:layout_gravity="center"
            android:layout_marginTop="18dp"
            android:src="@drawable/tab1_img"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_thickness"
                    android:textAppearance="@android:style/TextAppearance.Small" />

                <Spinner
                    android:id="@+id/maheshwariLineSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/line_thickness"
                    android:textAppearance="@android:style/TextAppearance.Small" />

                <RadioGroup
                    android:id="@+id/maheshwariColorRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/maheshwariRadioBtnBlue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/blue" />

                    <RadioButton
                        android:id="@+id/maheshwariRadioBtnRed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/red" />

                    <RadioButton
                        android:id="@+id/maheshwariRadioBtnYellow"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/yellow" />

                </RadioGroup>

                <Button
                    android:id="@+id/maheshwariBtnSet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/set" />

            </LinearLayout>

        </LinearLayout>

        <maheshwari.rana.s301110467.CanvasView
            android:id="@+id/signature_canvas"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/maheshwariBtnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/clear" />

        <Button
            android:id="@+id/maheshwariBtnCanvas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/canvas" />



    </LinearLayout>

</ScrollView>