<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <maheshwari.rana.s301110467.CanvasView
        android:id="@+id/signature_canvas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_thickness"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <Spinner
                android:id="@+id/maheshwariLineSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/line_thickness"
                android:textAppearance="@android:style/TextAppearance.Small" />

            <RadioGroup
                android:id="@+id/maheshwariColorRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/maheshwariRadioBtnBlue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blue" />

                <RadioButton
                    android:id="@+id/maheshwariRadioBtnRed"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/maheshwariRadioBtnYellow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow" />

            </RadioGroup>

            <Button
                android:id="@+id/maheshwariBtnSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:onClick="setProperty"
                android:text="@string/set" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/maheshwariBtnClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:onClick="clearCanvas"
        android:text="@string/clear" />

</FrameLayout>